--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,147 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background-color: pink;
+}
+
+/* Navbar.css */
+.navbar {
+  background-color: black;
   color: white;
+  /* border-radius: 0px 0px 10% 10% ; */
+  width: 90vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.nav-links {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  padding: 0;
+  width: 60%;
 }
 
-@keyframes App-logo-spin {
+.nav-links li {
+  margin: 0;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  padding: 12px 16px;
+  display: block;
+}
+
+.nav-links a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+/* .bg{
+  background-image:url("https://as2.ftcdn.net/v2/jpg/06/14/08/85/1000_F_614088533_fJZ0kbk6OkqC8fawGfYuvQPOtKuqegOP.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 50vh;
+  width: 100vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+} */
+.input{
+  width: 50%;
+  height: 6vh;
+  border: 1px solid yellow;
+}
+.select{
+  border: 1px solid rgb(85, 185, 4);
+  color: rgb(17, 3, 78);
+  margin: 15px;
+}
+.cardss{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0px 0px 10px 5px palevioletred;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+}
+.div{
+  display: flex;
+   flex-wrap: wrap;
+  justify-content: space-evenly; 
+   
+}
+.img{
+  height: 300px;
+  /* width: 300px; */
+  
+
+}
+.outer{
+/* display: flex; 
+flex-direction: column;
+justify-content: space-between; 
+align-items: center; */
+/* background-color: black; */
+margin: 10px;
+width: 30%;
+}
+h1{
+  color: rgb(136, 7, 97);
+  animation: pulse 1s ease-in-out infinite;
+}
+@keyframes pulse {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+}
+h2 {
+  overflow: hidden;
+  border-right: .15em solid pink; 
+  white-space: nowrap;
+  animation: typewriter 4s steps(30, end) infinite, blink 1s step-end infinite;
+}
+
+@keyframes typewriter {
   from {
-    transform: rotate(0deg);
+    width: 0;
   }
   to {
-    transform: rotate(360deg);
+    width: 100%;
   }
+}
+
+@keyframes blink {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: pink; 
+  }
+}
+#button{
+  color: rgb(95, 23, 6);
+}
+#title{
+  color: rgb(99, 5, 63);
+  font-size: large;
+  font-weight: 500;
+}
+#strong{
+  color: rgb(224, 36, 3);
+}
+#val{
+  color:brown;
+  font-size: large;
+  font-weight: bold;
 }
